--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = quizzable
 author = Sai Koushik Balusulapalem
-version = 0.1.2
+version = 1.0.0.dev1
 description = education with python
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -17,6 +17,9 @@ classifiers =
     Operating System :: MacOS
     Operating System :: POSIX :: Linux
     Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
     Programming Language :: Python :: 3.12
 keywords = education, app, quiz, learn, backend
 
