--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = quizzable
 author = Sai Koushik Balusulapalem
-version = 1.0.0.dev2
+version = 1.0.0
 description = education with python
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -25,10 +25,3 @@ keywords = education, app, quiz, learn, backend
 
 [options]
 packages = find:
-
-[options.extras_require]
-dev = 
-    black
-    pytest
-    flake8
-    isort
