--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [metadata]
 name = quizzable
 author = Sai Koushik Balusulapalem
-version = 1.0.1
-description = education with python
+version = 1.0.2
+description = Education with Python.
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/balusulapalemsaikoushik/quizzable/
