add support for custom prompts

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,14 @@
 [metadata]
 name = quizzable
 author = Sai Koushik Balusulapalem
-version = 1.0.2
+version = 1.1.0.dev1
 description = Education with Python.
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/balusulapalemsaikoushik/quizzable/
 project_urls = 
     Bug Tracker = https://github.com/balusulapalemsaikoushik/quizzable/issues
+    Documentation = https://github.com/balusulapalemsaikoushik/quizzable/blob/main/README.md
 license = MIT License
 license_files = LICENSE
 classifiers = 
