--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = quizzable
 author = Sai Koushik Balusulapalem
-version = 1.1.0.dev1
+version = 1.1.0
 description = Education with Python.
 long_description = file: README.md
 long_description_content_type = text/markdown
